fix: combobox filters alignment

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -72,6 +72,8 @@ input[type="file"] {
     gap: 15px;
     flex-wrap: wrap;
     align-items: center;
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
 
 select {
